# actidoo-workflow-engine

./: .dockerignore  .gitignore  .mcp.json  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  build-local-devcontainer-image.sh  mkdocs.yml
backend/: .dockerignore  .env.devcontainer  conftest.py  lock-packages.sh  pyproject.toml  requirements.txt
backend/actidoo_wfe/: async_scheduling.py  cache.py  cli.py  connectors.py  constants.py  data_models.py  database.py  database_models.py  fastapi.py  i18n.py  session.py  settings.py  storage.py  venusian_scan.py
backend/actidoo_wfe/alembic/: env.py
backend/actidoo_wfe/alembic/versions/: 0f3c5b7fa4d9_add_task_queue_keys.py  10d894b60910_userlocale.py  38f22a088623_zlibjson.py  4bb6f2f6f4c2_add_workflow_user_claims.py  4d8c4d89b100_delegate_support.py  5ac6c99dbe4b_storage_abstraction.py  748a1d6cf5dd_add_workflow_userclaim_metadata.py  7f2e1a9c4b30_add_workflow_user_form_templates.py  957e40296322_store_bigger_specs.py  9f1c3fee8890_rename_triggered_by.py  b2cbdf43f36f_drop_attachment_db_content.py  ce6f4adda3a1_sort_tasks.py  e8b3d5c7a9f1_erroneous_task_reminder.py  fb45a9433d17_timer_events.py
backend/actidoo_wfe/auth/: __init__.py  claims.py  constants.py  core.py  deps.py  fastapi.py  hooks.py  schema.py
backend/actidoo_wfe/auth/authlib_starlette/: __init__.py  apps.py
backend/actidoo_wfe/auth/cross_context/: exports.py
backend/actidoo_wfe/auth/tests/: test_auth_login.py
backend/actidoo_wfe/helpers/: __init__.py  abc.py  bff_table.py  collections.py  concurrency.py  datauri.py  dependencies.py  file.py  http.py  json_traverse.py  logging.py  mail.py  mixin.py  modules.py  net.py  oauth_bearer.py  proxy_middleware.py  schema.py  string.py  tests.py  time.py  wait_for_server.py
backend/actidoo_wfe/testing/: README.md  __init__.py  pytest_plugin.py  utils.py
backend/actidoo_wfe/tests/: test_cache.py  test_connectors.py  test_data_model_api.py  test_data_models.py  test_tasks.py  test_venusian_scan.py
backend/actidoo_wfe/wf/: cli_i18n.py  config_data_model.py  constants.py  cron.py  error_schema.py  events.py  exceptions.py  fastapi.py  form_transformation.py  handlers.py  mail.py  models.py  option_task_helper.py  providers.py  registry_data_model.py  repository.py  service_application.py  service_data_model.py  service_form.py  service_form_templates.py  service_i18n.py  service_task_helper.py  service_user.py  service_workflow.py  spiff_customized.py  types.py  user_attributes.py  validation_task_helper.py  views.py  views_data_model.py
backend/actidoo_wfe/wf/api/: api_schema.py  deps.py  routes.py
backend/actidoo_wfe/wf/bff/: __init__.py  bff_admin.py  bff_admin_schema.py  bff_user.py  bff_user_data_model.py  bff_user_schema.py  deps.py
backend/actidoo_wfe/wf/cross_context/: imports.py
backend/actidoo_wfe/wf/tests/: test_api.py  test_bff_admin.py  test_bff_table_count.py  test_bff_user.py  test_bff_user_data_model.py  test_data_model_registry.py  test_definition_missing.py  test_erroneous_reminder.py  test_error_schema.py  test_events.py  test_filter_template_data.py  test_helpers.py  test_position_tracker.py  test_providers.py  test_services.py  test_task_update.py  test_user_attributes.py  (+6 more)
examples/workflow-extension-template/: .dockerignore  .env.devcontainer  README.md  conftest.py  pyproject.toml  workflow-engine.version
examples/workflow-extension-template/.devcontainer/: devcontainer.json  docker-compose.yml  realm-workflow.json
examples/workflow-extension-template/docker/: Dockerfile
(+342 files in other folders)
